--- a/.github/workflows/build-example-corne-nice_nano_v2-nice_view.yml
+++ b/.github/workflows/build-example-corne-nice_nano_v2-nice_view.yml
@@ -12,3 +12,4 @@ jobs:
       shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
       alphas: '["qwerty"]'
       nav: '["vi"]'
+      zconfig: 'CONFIG_ZMK_POINTING=y'
