--- a/.github/workflows/build-example-corne-nice_nano_v2-nice_view.yml
+++ b/.github/workflows/build-example-corne-nice_nano_v2-nice_view.yml
@@ -9,7 +9,7 @@ jobs:
     secrets: inherit
     with:
       board: '["nice_nano_v2"]'
-      shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
+      shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view", "settings_reset"]'
       alphas: '["qwerty"]'
       nav: '["vi"]'
       kconfig: '["CONFIG_ZMK_POINTING=y"]'
